...
        modifier
            .absoluteOffset(x = offsetX, y = offsetY)
            .pointerInput(layoutEditing) {
                if (!layoutEditing) return@pointerInput
                var start = TouchOffset()
                var bounds = Rect.Zero
                var viewport = IntSize.Zero
                var travel = Offset.Zero
                detectDragGestures(onDragStart = {
                    start = TouchOffset(currentOffsetX.value, currentOffsetY.value)
                    bounds = controlBounds
                    viewport = viewportSize
                    travel = Offset.Zero
...
